--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@headlessui/react": "^2.2.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
+    "framer-motion": "^12.1.0",
     "postcss": "^8.5.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
+    "react-type-animation": "^3.2.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
