--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.1.0",
     "postcss": "^8.5.1",
     "prop-types": "^15.8.1",
