--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "start": "vite preview",
     "lint": "eslint .",
     "preview": "vite preview"
+  },
+  "engines": {
+    "node": ">=18",
+    "npm": ">=9"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
