--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "react-type-animation": "^3.2.0",
+    "reactjs-popup": "^2.0.6",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
